feat: 최근 조회된 게시글 수가 10개 미만이면 최신 게시글과 병합